fix z-index

--- a/src/css/layout/_layout.css
+++ b/src/css/layout/_layout.css
@@ -58,6 +58,7 @@ Layout for website.
         background-color: var(--color-ui-black);
         border-bottom: 1px solid rgba(255,255,255,0.4);
         box-shadow: 1px 1px 5px rgba(0, 0, 0, .4);
+        z-index: 9999999999;
     }
 }
 
